improved ubuntu app-UI highlighting

--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,5 +1,4 @@
 [Settings]
-gtk-color-scheme = "base_color:#3A3935\nbg_color:#494841\ntooltip_bg_color:#494841\nselected_bg_color:#E16F41\ntext_color:#E1E1DB\nfg_color:#dfdbd2\ntooltip_fg_color:#ECECE4\nselected_fg_color:#ECECE4\nlink_color:#FB7753\nbg_color_dark:#3c3b37\nfg_color_dark:#dfdbd2"
+gtk-color-scheme = "base_color:#2E2D2A\nbg_color:#3D3C37\ntooltip_bg_color:#3D3C37\nselected_bg_color:#E16F41\ntext_color:#E1E1DB\nfg_color:#dfdbd2\ntooltip_fg_color:#ECECE4\nselected_fg_color:#ECECE4\nlink_color:#FB7753\nbg_color_dark:#3c3b37\nfg_color_dark:#dfdbd2"
 gtk-auto-mnemonics = 1
 gtk-alternative-sort-arrows = true
-
